SERVER-52919 Wire compression not enabled for initial sync

(cherry picked from commit 762eb95cd160aab9bec295b1e46d3c9a8ab505e2)